--- a/index.html
+++ b/index.html
@@ -15,5 +15,8 @@ alt="Sad Bot"/></p>
 <p><img src="Pictures/Dont Touch My Mountain Dew.gif"
 alt="meme"/></p>
 <h1>OK</h1>
+<hr>
+  <h1>Red Is Now The Imposter Everytime!</h1>
+  <p> As it turns out, red is now the imposter everytime in <b>Among Us</b>so, now we cannot trust red.</p>
 </body>
 </html>
